--- a/stylesheet.css
+++ b/stylesheet.css
@@ -21,6 +21,12 @@ body {
     height: 100vh;
     background-color: black; 
     overflow: hidden;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: small;
+}
+
+a {
+    color: #B41661;
 }
 
 .wrapper {
@@ -34,35 +40,106 @@ body {
 header {
     grid-row: 1;
     grid-column: 1/4;
-    background-color: yellow;
+
 }
 
 .header {
    display: grid;
-   grid-template-columns: 200px 1fr 200px 100px;
-   grid-template-rows: 50%; 
+   height: 100px;
+   grid-template-columns: 250px 1fr 1fr 100px;
+   grid-template-rows: 50%;
+   background-color: black;
+  
+ 
+}
+
+.buttons {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr; 
+    grid-template-rows: 50%;
+    grid-row: 2;
+    grid-column: 3;
+    text-align: center;
+    justify-content: right;
     
 }
 
-.header p {
-    margin-left: 10px;
+button {
+    width: 75px;
+    border-radius: 25px;
+    background-color: #B41661; 
+    color: white; 
+
 }
+
+.user2 {
+    display: grid;
+    grid-template-columns: 50px 50px 1fr;  
+    grid-template-rows: 50%; 
+    grid-column: 4;
+    grid-row: 1; 
+    color: white; 
+    margin-top: 15px; 
+    margin-left: -80px;
+    align-items: center;
+    font-size: medium;
+}
+
+.user2 img {
+    height: 30px; 
+}
+
+img#notification {
+    filter: invert(1);
+}
+
+img#profilepic{
+    background-color: #FFC107;
+    padding: 2px;
+    border-radius: 25px;
+}
+.user {
+    
+    display: flex;
+    align-items: center;
+    grid-column: 2/3;
+    grid-row: 2;
+    color: white;
+    font-weight: bold;
+    margin-top: -10px;
+    padding: 10px;
+}
+
+
+.user img {
+    width: 50px;
+    padding: 5px;
+    border-radius: 25px;
+    background-color: #FFC107;
+    margin: 10px;
+    border: 1px black solid; 
+
+}
+
 /*Search bar styling*/
 .search input[type=text] {
-    width: 400px;
+    width: 500px;
     height: 25px;
     border-radius: 25px;
 }
 
 .search {
     grid-row: 1; 
-    grid-column: 2; 
-    margin-left: 75px;
+    grid-column: 2/3; 
+    margin-left: 10px;
     margin-top: 10px;
+    padding: 15px;
+
 }
 .search img {
     width: 25px; 
     vertical-align: middle;
+    filter: invert(1);
 }
 
 /*right sidebar styling*/
@@ -145,13 +222,15 @@ header {
 .page-main {
     grid-row: 2/6;
     grid-column: 2; 
-    background-color: #191C24; 
+    background-color: black; 
     grid-area: auto;
     border-radius: 40px;
+    color: white;
 }
 
 .page-main h1 {
     text-align: center;
+
 }
 
 /*footer styling*/
@@ -170,6 +249,7 @@ header {
     border-radius: 40px;
     margin-left: 10px;
     border: 1px solid #B41661;
+    margin-top: -100px;
 }
 
 .page-nav ul {
@@ -206,3 +286,27 @@ h1 #icons {
 
 
 
+.cards {
+    color: white; 
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr; 
+    gap: 20px;
+    padding: 10px;
+}
+
+.article {
+    border: 1px solid #B41661;
+    border-radius: 25px; 
+    padding: 20px;
+    background-color: #191C24;
+}
+
+.title {
+    font-size: large; 
+    font-weight: bold; 
+}
+
+.article p {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
